--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,6 +8,7 @@ galaxy_info:
   - name: Ubuntu
     versions:
     - trusty
+    - bionic
   galaxy_tags:
     - transparent_hugepage
 dependencies: []
