[#180599146] New version for systemd based systems
This version allows to set the transparent_hugepage
settings before starting a service on systemd based systems.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,8 +7,8 @@ galaxy_info:
   platforms:
   - name: Ubuntu
     versions:
-    - trusty
     - bionic
+    - focal
   galaxy_tags:
     - transparent_hugepage
 dependencies: []
