--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,24 +1,9 @@
 ---
 # vim:et:ts=2:ft=ansible
 
-- name: Ensure rc.local exists and exits cleanly
-  lineinfile:
-    dest: /etc/rc.local
-    line: 'exit 0'
-    regexp: 'exit 0'
-    insertafter: EOF
-    create: yes
-    owner: root
-    group: root
-    mode: 0754
-
-- name: Modify rc.local to configure transparent huge pages
-  lineinfile:
-    dest: /etc/rc.local
-    line: '/bin/echo {{ item.value }} > /sys/kernel/mm/transparent_hugepage/{{ item.key }}'
-    insertbefore: 'exit 0'
-  with_dict: "{{ _transparent_hugepage_setup.settings }}"
-
-- name: Disable transparent huge pages now
-  shell: /bin/echo {{ item.value }} > /sys/kernel/mm/transparent_hugepage/{{ item.key }}
-  with_dict: "{{ _transparent_hugepage_setup.settings }}"
+- name: Copy transparent hugepage setup systemd service unit
+  template:
+    src: "{{ item }}.j2"
+    dest: "/{{ item }}"
+  loop:
+    - etc/systemd/system/transparent-hugepage-setup.service
