--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,14 +1,16 @@
 galaxy_info:
   author: Daniel Schneller
-  description: Sets up  transparent_hugepage settings
+  namespace: rheinwerk
+  role_name: transparent_hugepage_setup
+  description: Sets up transparent_hugepage settings
   company: Rheinwerk
   license: license (GPLv3)
-  min_ansible_version: 2.0
+  min_ansible_version: 2.9.0
   platforms:
-  - name: Ubuntu
-    versions:
-    - bionic
-    - focal
+    - name: Ubuntu
+      versions:
+        - focal
+        - jammy
   galaxy_tags:
-    - transparent_hugepage
+    - thp
 dependencies: []
