--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,5 +5,6 @@
   template:
     src: "{{ item }}.j2"
     dest: "/{{ item }}"
+    mode: "0644"
   loop:
     - etc/systemd/system/transparent-hugepage-setup.service
